--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Csf0.1</title>
+    <title>0.2SegundãoCSF</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #093170;
-            color: white;
+            color: #8ca0a8;
             margin: 0;
             padding: 0;
             display: flex;
@@ -63,6 +63,21 @@
             width: 100%;
             border-radius: 10px;
         }
+        .aluno {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background-color: #e0e0e0;
+            color: black;
+            padding: 10px;
+            border-radius: 10px;
+            margin-bottom: 10px;
+        }
+        .aluno img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+        }
     </style>
     <script>
         function toggleSection(id) {
@@ -89,6 +104,9 @@
         </button>
         <button onclick="toggleSection('noticias')">
             <img src="https://media.discordapp.net/attachments/873635645212491857/1351638520296505394/download.png?ex=67db1af7&is=67d9c977&hm=c92f228fd775d79ee9c091f2880e6a183244600d274bc9a076ed8ec7cc13580c&=&format=webp&quality=lossless" alt="Notícias">
+        </button>
+        <button onclick="toggleSection('alunos')">
+            <img src="https://media.discordapp.net/attachments/873635645212491857/1351638520296505394/download.png?ex=67db1af7&is=67d9c977&hm=c92f228fd775d79ee9c091f2880e6a183244600d274bc9a076ed8ec7cc13580c&=&format=webp&quality=lossless" alt="Alunos">
         </button>
     </div>
     <div id="trabalhos" class="info-section">
@@ -146,20 +164,51 @@
             no Portal do Projeto GEOAFRO, obtendo novas perspectivas sobre a presença e a organização da 
             cultura afro-brasileira no Brasil e suas influências em políticas públicas.</p>
     </div>
+    <div id="alunos" class="info-section">
+        <button class="close-btn" onclick="closeSection('alunos')">X</button>
+        <h2>Alunos</h2>
+        <div class="aluno">
+            <img src="https://media.discordapp.net/attachments/873635645212491857/1351665780672172072/people-icon-vector-person-sing-260nw-707883430.png?ex=67db345a&is=67d9e2da&hm=5a3fa8fb836fac7b7b5c14378c144d14b1efed831ca05b52c554eeb7b4ef9d7a&=&format=webp&quality=lossless" alt="Eri Costa">
+            <div>
+                <h3>Eri Costa</h3>
+                <p>Com fé logo breve será nosso renomadíssimo líder!! Gigachaad</p>
+            </div>
+        </div>
+        <div class="aluno" style="flex-direction: row-reverse;">
+            <img src="https://media.discordapp.net/attachments/873635645212491857/1351665780672172072/people-icon-vector-person-sing-260nw-707883430.png?ex=67db345a&is=67d9e2da&hm=5a3fa8fb836fac7b7b5c14378c144d14b1efed831ca05b52c554eeb7b4ef9d7a&=&format=webp&quality=lossless" alt="Enzo Valverde">
+            <div>
+                <h3>Enzo Valverde</h3>
+                <p>Programou esse site aqui ó, tá ficando dahora!</p>
+            </div>
+        </div>
+        <div class="aluno">
+            <img src="https://media.discordapp.net/attachments/873635645212491857/1351665780672172072/people-icon-vector-person-sing-260nw-707883430.png?ex=67db345a&is=67d9e2da&hm=5a3fa8fb836fac7b7b5c14378c144d14b1efed831ca05b52c554eeb7b4ef9d7a&=&format=webp&quality=lossless" alt="Giulia Sampaio">
+            <div>
+                <h3>Giulia Sampaio</h3>
+                <p>Em breve nossa vice-líder e membro dos Jovens Sarados!</p>
+            </div>
+        </div>
+    </div>
     <div id="noticias" class="info-section">
         <button class="close-btn" onclick="closeSection('noticias')">X</button>
         <h2>Notícias da Semana</h2>
         <div class="noticia">
-            <h3>Trabalho sobre Centro de Massa</h3>
-            <p>Na turma de exatas foi feito um trabalho sobre centro de massa!</p>
+            <h3>Início das votações de lider e vice-lider da sala.</h3>
+            <p>Durante as aulas de Ed.Física e históra, a instrutora Rita nos apresentou ao "sistema de liderança" da sala. <a href="#" onclick="toggleSection('alunos')">Eri Costa</a> e <a href="#" onclick="toggleSection('alunos')">Giulia Sampaio</a> se elegeram!!</p>
             <p><strong>Data:</strong> 17/03</p>
         </div>
         <hr>
         <div class="noticia">
             <h3>Piquenique Temático na Aula de Química</h3>
-            <p>Os alunos fizeram um piquenique temático!</p>
+            <p>Nós alunos, fizemos um piquenique temático do atual assunto de química! Instruido pela professora (esqueci o nome dela).</p>
             <p><strong>Data:</strong> 18/03</p>
             <img src="https://media.discordapp.net/attachments/873635645212491857/1351636526223593604/image.png?ex=67db191c&is=67d9c79c&hm=5c676b788a3d4d6f6576dc0f42ca874b46c5d410fc9eacdb8b62f7129a6836e9&=&format=webp&quality=lossless" alt="Piquenique Temático">
+        </div>
+        <hr>
+        <div class="noticia">
+            <h3>Trabalho sobre Centro de Massa</h3>
+            <p>Na turma de exatas foi feito um trabalho sobre centro de massa, ele consistia na criação de um "João Bobo" utilizando uma bexiga e uma bolinha de gude! O trabalho foi instruido pelo professor anderson.</p>
+            <p><strong>Data:</strong> 17/03</p>
         </div>
     </div>
 </body>
