Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <img src="https://media.discordapp.net/attachments/873635645212491857/1351665780672172072/people-icon-vector-person-sing-260nw-707883430.png?ex=67db345a&is=67d9e2da&hm=5a3fa8fb836fac7b7b5c14378c144d14b1efed831ca05b52c554eeb7b4ef9d7a&=&format=webp&quality=lossless" alt="Giulia Sampaio">
             <div>
                 <h3>Giulia Sampaio</h3>
-                <p>Em breve nossa vice-líder e membro dos Jovens Sarados!</p>
+                <p>Em breve nossa queridíssima vice-líder!</p>
             </div>
         </div>
     </div>
