--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
         .sidebar {
             width: 100%;
-            background-color: ##786449;
+            background-color: #786449;
             display: flex;
             justify-content: center;
             padding: 10px 0;
