--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #2e2009;
-            color: #a89e8c;
+            background-color: #4D473A;
+            color: white;
             margin: 0;
             padding: 0;
             display: flex;
@@ -17,7 +17,7 @@
         }
         .sidebar {
             width: 100%;
-            background-color: #786449;
+            background-color: #7A6741;
             display: flex;
             justify-content: center;
             padding: 10px 0;
@@ -34,7 +34,7 @@
         }
         .info-section {
             display: none;
-            background-color: #fadcb1;
+            background-color: #F7AB14;
             color: black;
             padding: 20px;
             border-radius: 10px;
@@ -54,7 +54,7 @@
             float: right;
         }
         .noticia {
-            background-color: #cfa56b;
+            background-color: #F7AB14;
             padding: 10px;
             border-radius: 10px;
             margin-bottom: 10px;
@@ -67,7 +67,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            background-color: #cfa56b;
+            background-color: #F7AB14;
             color: black;
             padding: 10px;
             border-radius: 10px;
