Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
         .info-section {
             display: none;
-            background-color: #F7AB14;
+            background-color: #A28343;
             color: black;
             padding: 20px;
             border-radius: 10px;
@@ -54,7 +54,7 @@
             float: right;
         }
         .noticia {
-            background-color: #F7AB14;
+            background-color: #CD9933;
             padding: 10px;
             border-radius: 10px;
             margin-bottom: 10px;
@@ -67,7 +67,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            background-color: #F7AB14;
+            background-color: #CD9933;
             color: black;
             padding: 10px;
             border-radius: 10px;
