--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #4D473A;
-            color: white;
+            color: #4D473A;
             margin: 0;
             padding: 0;
             display: flex;
