--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #4D473A;
-            color: #4D473A;
+            background-color: #0a0647;
+            color: #0a0647;
             margin: 0;
             padding: 0;
             display: flex;
