--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
         .sidebar {
             width: 100%;
-            background-color: #7A6741;
+            background-color: #a66d1e;
             display: flex;
             justify-content: center;
             padding: 10px 0;
@@ -34,7 +34,7 @@
         }
         .info-section {
             display: none;
-            background-color: #A28343;
+            background-color: #a66d1e;
             color: black;
             padding: 20px;
             border-radius: 10px;
@@ -54,10 +54,13 @@
             float: right;
         }
         .noticia {
-            background-color: #CD9933;
+            background-color: #e8ae5d;
             padding: 10px;
             border-radius: 10px;
             margin-bottom: 10px;
+        }
+        hr {
+            border-color: #e8ae5d;
         }
         .noticia img {
             width: 100%;
@@ -67,7 +70,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            background-color: #CD9933;
+            background-color: #e8ae5d;
             color: black;
             padding: 10px;
             border-radius: 10px;
@@ -211,5 +214,3 @@
             <p><strong>Data:</strong> 17/03</p>
         </div>
     </div>
-</body>
-</html>
