--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
             border-color: #e8ae5d;
         }
         .logo {
-            background-size: auto;
+            width: 20%;
+            height: 20%;
             margin: 50px;
         }
         .noticia img {
