--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         .logo {
             width: 80%;
             height: 80%;
-            margin: 50px;
+            margin: 10px 50px 10px 50px;
         }
         .noticia img {
             width: 100%;
