--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
 <body>
     <div class="sidebar">
         <button onclick="toggleSection('trabalhos')">
-            <img src="https://media.discordapp.net/attachments/873635645212491857/1351638520296505394/download.png?ex=67db1af7&is=67d9c977&hm=c92f228fd775d79ee9c091f2880e6a183244600d274bc9a076ed8ec7cc13580c&=&format=webp&quality=lossless" alt="Trabalhos">
+            <img src="seta.png" alt="Trabalhos">
         </button>
         <button onclick="toggleSection('provas')">
-            <img src="https://media.discordapp.net/attachments/873635645212491857/1351638520296505394/download.png?ex=67db1af7&is=67d9c977&hm=c92f228fd775d79ee9c091f2880e6a183244600d274bc9a076ed8ec7cc13580c&=&format=webp&quality=lossless" alt="Provas">
+            <img src="seta.png" alt="Provas">
         </button>
         <button onclick="toggleSection('atualidades')">
-            <img src="https://media.discordapp.net/attachments/873635645212491857/1351638520296505394/download.png?ex=67db1af7&is=67d9c977&hm=c92f228fd775d79ee9c091f2880e6a183244600d274bc9a076ed8ec7cc13580c&=&format=webp&quality=lossless" alt="Atualidades">
+            <img src="seta.png" alt="Atualidades">
         </button>
         <button onclick="toggleSection('noticias')">
-            <img src="https://media.discordapp.net/attachments/873635645212491857/1351638520296505394/download.png?ex=67db1af7&is=67d9c977&hm=c92f228fd775d79ee9c091f2880e6a183244600d274bc9a076ed8ec7cc13580c&=&format=webp&quality=lossless" alt="Notícias">
+            <img src="seta.png" alt="Notícias">
         </button>
         <button onclick="toggleSection('alunos')">
-            <img src="https://media.discordapp.net/attachments/873635645212491857/1351638520296505394/download.png?ex=67db1af7&is=67d9c977&hm=c92f228fd775d79ee9c091f2880e6a183244600d274bc9a076ed8ec7cc13580c&=&format=webp&quality=lossless" alt="Alunos">
+            <img src="seta.png" alt="Alunos">
         </button>
     </div>
     <img class="logo" src="https://media.discordapp.net/attachments/873635645212491857/1355308278732816435/02cd2f8d-3514-47f6-8c21-03edeffc9e83.png?ex=67e874b2&is=67e72332&hm=6624acfc30ae7b98619fb30b8ea0c67f68711fc7b9cd8d878216c144ba08982b&=&format=webp&quality=lossless">
@@ -181,21 +181,21 @@
         <button class="close-btn" onclick="closeSection('alunos')">X</button>
         <h2>Alunos</h2>
         <div class="aluno">
-            <img src="https://media.discordapp.net/attachments/873635645212491857/1351665780672172072/people-icon-vector-person-sing-260nw-707883430.png?ex=67db345a&is=67d9e2da&hm=5a3fa8fb836fac7b7b5c14378c144d14b1efed831ca05b52c554eeb7b4ef9d7a&=&format=webp&quality=lossless" alt="Eri Costa">
+            <img src="person.png" alt="Eri Costa">
             <div>
                 <h3>Eri Costa</h3>
                 <p>Com fé logo breve será nosso renomadíssimo líder!! Gigachaad</p>
             </div>
         </div>
         <div class="aluno" style="flex-direction: row-reverse;">
-            <img src="https://media.discordapp.net/attachments/873635645212491857/1351665780672172072/people-icon-vector-person-sing-260nw-707883430.png?ex=67db345a&is=67d9e2da&hm=5a3fa8fb836fac7b7b5c14378c144d14b1efed831ca05b52c554eeb7b4ef9d7a&=&format=webp&quality=lossless" alt="Enzo Valverde">
+            <img src="person.png" alt="Enzo Valverde">
             <div>
                 <h3>Enzo Valverde</h3>
                 <p>Programou esse site aqui ó, tá ficando dahora!</p>
             </div>
         </div>
         <div class="aluno">
-            <img src="https://media.discordapp.net/attachments/873635645212491857/1351665780672172072/people-icon-vector-person-sing-260nw-707883430.png?ex=67db345a&is=67d9e2da&hm=5a3fa8fb836fac7b7b5c14378c144d14b1efed831ca05b52c554eeb7b4ef9d7a&=&format=webp&quality=lossless" alt="Giulia Sampaio">
+            <img src="person.png" alt="Giulia Sampaio">
             <div>
                 <h3>Giulia Sampaio</h3>
                 <p>Em breve nossa queridíssima vice-líder!</p>
