--- a/index.html
+++ b/index.html
@@ -122,19 +122,19 @@
 <body>
     <div class="sidebar">
         <button onclick="toggleSection('trabalhos')">
-            <img src="seta.png" alt="Trabalhos">
+            <img src="pre-sets/seta.png" alt="Trabalhos">
         </button>
         <button onclick="toggleSection('provas')">
-            <img src="seta.png" alt="Provas">
+            <img src="pre-sets/seta.png" alt="Provas">
         </button>
         <button onclick="toggleSection('atualidades')">
-            <img src="seta.png" alt="Atualidades">
+            <img src="pre-sets/seta.png" alt="Atualidades">
         </button>
         <button onclick="toggleSection('noticias')">
-            <img src="seta.png" alt="Notícias">
+            <img src="pre-sets/seta.png" alt="Notícias">
         </button>
         <button onclick="toggleSection('alunos')">
-            <img src="seta.png" alt="Alunos">
+            <img src="pre-sets/seta.png" alt="Alunos">
         </button>
     </div>
     <img class="logo" src="https://media.discordapp.net/attachments/873635645212491857/1355308278732816435/02cd2f8d-3514-47f6-8c21-03edeffc9e83.png?ex=67e874b2&is=67e72332&hm=6624acfc30ae7b98619fb30b8ea0c67f68711fc7b9cd8d878216c144ba08982b&=&format=webp&quality=lossless">
@@ -205,7 +205,7 @@
             </div>
         </div>
         <div class="aluno" style="flex-direction: row-reverse;">
-            <img src="person.png" alt="Enzo Valverde">
+            <img src="pre-sets/person.png" alt="Enzo Valverde">
             <div>
                 <h3>Enzo Valverde</h3>
                 <p>Programou esse site aqui ó, tá ficando dahora!</p>
@@ -234,7 +234,7 @@
             <h3>Piquenique Temático na Aula de Química</h3>
             <p>Nós alunos, fizemos um piquenique temático do atual assunto de química! Instruido pela professora (esqueci o nome dela).</p>
             <p><strong>Data:</strong> 18/03</p>
-            <img src="pqnq.png" alt="Piquenique Temático">
+            <img src="Notícias/pqnq.png" alt="Piquenique Temático">
         </div>
         <hr>
         <div class="noticia" data-date="2025-03-17">
