--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <button class="close-btn" onclick="closeSection('alunos')">X</button>
         <h2>Alunos</h2>
         <div class="aluno">
-            <img src="person.png" alt="Eri Costa">
+            <img src="pre-sets/person.png" alt="Eri Costa">
             <div>
                 <h3>Eri Costa</h3>
                 <p>Com fé logo breve será nosso renomadíssimo líder!! Gigachaad</p>
@@ -212,7 +212,7 @@
             </div>
         </div>
         <div class="aluno">
-            <img src="person.png" alt="Giulia Sampaio">
+            <img src="pre-sets/person.png" alt="Giulia Sampaio">
             <div>
                 <h3>Giulia Sampaio</h3>
                 <p>Em breve nossa queridíssima vice-líder!</p>
@@ -224,6 +224,7 @@
         <h2>Notícias da Semana</h2>
         <label for="newsFilter">Filtrar:</label>
         <input type="date" id="newsFilter" onchange="filterNews()">
+        <hr>
         <div class="noticia" data-date="2025-03-17">
             <h3>Início das votações de lider e vice-lider da sala.</h3>
             <p>Durante as aulas de Ed.Física e históra, a instrutora Rita nos apresentou ao "sistema de liderança" da sala. <a href="#" onclick="toggleSection('alunos')">Eri Costa</a> e <a href="#" onclick="toggleSection('alunos')">Giulia Sampaio</a> se elegeram!!</p>
