--- a/index.html
+++ b/index.html
@@ -59,11 +59,29 @@
             border-radius: 10px;
             margin-bottom: 10px;
         }
+        .attlidades {
+            background-color: #e8ae5d;
+            padding: 10px;
+            border-radius: 10px;
+            margin-bottom: 10px;
+        }
+        .assprova {
+            background-color: #e8ae5d;
+            padding: 10px;
+            border-radius: 10px;
+            margin-bottom: 10px;
+        }
         hr {
             border-color: #e8ae5d;
         }
         .txtprincipal {
             text-align: center;
+        }
+        .trblpendente {
+            background-color: #e8ae5d;
+            padding: 10px;
+            border-radius: 10px;
+            margin-bottom: 10px;
         }
         .logo {
             width: 80%;
@@ -142,57 +160,65 @@
     <div id="trabalhos" class="info-section">
         <button class="close-btn" onclick="closeSection('trabalhos')">X</button>
         <h2>Trabalhos Pendentes</h2>
-        <ul>
-            <li><strong>Quarta 19/03:</strong> Prova de Sociologia</li>
-            <li><strong>Quinta 20/03:</strong> Atividade prática de Artes</li>
-        </ul>
+        <div class="trblpendente">
+            <ul>
+                <li><strong>Quarta 19/03:</strong> Prova de Sociologia</li>
+                <li><strong>Quinta 20/03:</strong> Atividade prática de Artes</li>
+            </ul>
+        </div>
     </div>
     <div id="provas" class="info-section">
         <button class="close-btn" onclick="closeSection('provas')">X</button>
         <h2>Assuntos das Provas da Semana</h2>
-        <h3>Geografia</h3>
-        <p><strong>Prova Padrão:</strong></p>
-        <ul>
-            <li>Livro 9, capítulo 20, Separatismo na Europa e na América, páginas 306-313</li>
-            <li>Livro 9, capítulo 21, Separatismos, páginas 327-333</li>
-        </ul>
+        <div class="assprova">
+            <h3>Geografia</h3>
+            <p><strong>Prova Padrão:</strong></p>
+            <ul>
+                <li>Livro 9, capítulo 20, Separatismo na Europa e na América, páginas 306-313</li>
+                <li>Livro 9, capítulo 21, Separatismos, páginas 327-333</li>
+            </ul>
+        </div>
         <hr>
-        <h3>História</h3>
-        <p><strong>Prova Padrão:</strong></p>
-        <ul>
-            <li>Livro 9, capítulo 20, Iluminismo e seus grandes nomes, páginas 98-106</li>
-            <li>Livro 9, capítulo 21, Ideais medievais, páginas 114-126</li>
-        </ul>
+        <div class="assprova">
+            <h3>História</h3>
+            <p><strong>Prova Padrão:</strong></p>
+            <ul>
+                <li>Livro 9, capítulo 20, Iluminismo e seus grandes nomes, páginas 98-106</li>
+                <li>Livro 9, capítulo 21, Ideais medievais, páginas 114-126</li>
+            </ul>
+        </div>
     </div>
     <div id="atualidades" class="info-section">
         <button class="close-btn" onclick="closeSection('atualidades')">X</button>
         <h1>Texto de Atualidades da Semana</h1>
-        <h3>Projeto GEOAFRO aplica Geodireito para cartografar a cultura afro-brasileira</h3>
-        <p>O Projeto GEOAFRO lançou, neste mês, uma série de mapas que ilustram a trajetória dos 
-            movimentos sociais e políticos afro-brasileiros desde 1971 até 2024, integrando a aplicação do 
-            geodireito para representar a presença e a organização dessa cultura no território nacional. 
-            Intitulada “Cartografia do Movimento Social & Geopolítico Afrobrasileiro”, a coleção apresenta uma 
-            análise detalhada da mobilização do movimento negro no Brasil e acompanha o desenvolvimento 
-            do Dia Nacional da Consciência Negra.
-            <span style="background-color: yellow !important; color: black;">Composta por seis mapas temáticos, a cartografia recorre à linguagem visual, estatísticas e 
-            conceitos de Geodireito para delinear as territorialidades afro-brasileiras ao longo das décadas. </span>
-            Essa documentação acompanha eventos e fatos que marcaram a constituição e a evolução do 
-            Movimento Negro Unificado, destacando as adesões municipais e estaduais ao feriado de Zumbi 
-            dos Palmares e da Consciência Negra. Sob a coordenação do geógrafo Rafael Sanzio dos Anjos, 
-            a iniciativa faz parte do Sistema de Informações Espaciais do Brasil Africano (SIEAFRO) e conta 
-            com o suporte do Instituto Káwò, além de financiamento do CNPQ.
-            Os mapas avançam na disponibilização pública de cartografias étnico-raciais em plataformas 
-            digitais brasileiras ao oferecer uma perspectiva histórica da atuação e dos movimentos afrobrasileiros
-            em várias regiões. Esse levantamento revela a concentração de eventos e iniciativas de 
-            matriz africana em diversas cidades e regiões do país e ilustra a trajetória de um movimento que 
-            começou formalmente com o Movimento Negro Unificado, nos anos 1970. Ela está presente até os 
-            dias atuais, com conquistas legislativas como a Lei n. 14.759/23, que estabelece o Dia da 
-            Consciência Negra como feriado nacional.
-            A cartografia do GEOAFRO também contribui para o contexto educacional ao se tornar uma 
-            ferramenta de apoio para o ensino da história afro-brasileira em escolas e universidades. 
-            Educadores, pesquisadores, estudantes e o público em geral podem acessar os mapas temáticos 
-            no Portal do Projeto GEOAFRO, obtendo novas perspectivas sobre a presença e a organização da 
-            cultura afro-brasileira no Brasil e suas influências em políticas públicas.</p>
+        <div class="attlidades">
+            <h3>Projeto GEOAFRO aplica Geodireito para cartografar a cultura afro-brasileira</h3>
+            <p>O Projeto GEOAFRO lançou, neste mês, uma série de mapas que ilustram a trajetória dos 
+                movimentos sociais e políticos afro-brasileiros desde 1971 até 2024, integrando a aplicação do 
+                geodireito para representar a presença e a organização dessa cultura no território nacional. 
+                Intitulada “Cartografia do Movimento Social & Geopolítico Afrobrasileiro”, a coleção apresenta uma 
+                análise detalhada da mobilização do movimento negro no Brasil e acompanha o desenvolvimento 
+                do Dia Nacional da Consciência Negra.
+                <span style="background-color: yellow !important; color: black;">Composta por seis mapas temáticos, a cartografia recorre à linguagem visual, estatísticas e 
+                conceitos de Geodireito para delinear as territorialidades afro-brasileiras ao longo das décadas. </span>
+                Essa documentação acompanha eventos e fatos que marcaram a constituição e a evolução do 
+                Movimento Negro Unificado, destacando as adesões municipais e estaduais ao feriado de Zumbi 
+                dos Palmares e da Consciência Negra. Sob a coordenação do geógrafo Rafael Sanzio dos Anjos, 
+                a iniciativa faz parte do Sistema de Informações Espaciais do Brasil Africano (SIEAFRO) e conta 
+                com o suporte do Instituto Káwò, além de financiamento do CNPQ.
+                Os mapas avançam na disponibilização pública de cartografias étnico-raciais em plataformas 
+                digitais brasileiras ao oferecer uma perspectiva histórica da atuação e dos movimentos afrobrasileiros
+                em várias regiões. Esse levantamento revela a concentração de eventos e iniciativas de 
+                matriz africana em diversas cidades e regiões do país e ilustra a trajetória de um movimento que 
+                começou formalmente com o Movimento Negro Unificado, nos anos 1970. Ela está presente até os 
+                dias atuais, com conquistas legislativas como a Lei n. 14.759/23, que estabelece o Dia da 
+                Consciência Negra como feriado nacional.
+                A cartografia do GEOAFRO também contribui para o contexto educacional ao se tornar uma 
+                ferramenta de apoio para o ensino da história afro-brasileira em escolas e universidades. 
+                Educadores, pesquisadores, estudantes e o público em geral podem acessar os mapas temáticos 
+                no Portal do Projeto GEOAFRO, obtendo novas perspectivas sobre a presença e a organização da 
+                cultura afro-brasileira no Brasil e suas influências em políticas públicas.</p>            
+        </div>
     </div>
     <div id="alunos" class="info-section">
         <button class="close-btn" onclick="closeSection('alunos')">X</button>
