--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </div>
     <div id="provas" class="info-section">
         <button class="close-btn" onclick="closeSection('provas')">X</button>
-        <h2>Assuntos das Provas da Semana</h2>
+        <h2>Assuntos das Provas</h2>
         <div class="assprova">
             <h3>Geografia</h3>
             <p><strong>Prova Padrão:</strong></p>
@@ -190,7 +190,7 @@
     </div>
     <div id="atualidades" class="info-section">
         <button class="close-btn" onclick="closeSection('atualidades')">X</button>
-        <h1>Texto de Atualidades da Semana</h1>
+        <h1>Texto de Atualidades</h1>
         <div class="attlidades">
             <h3>Projeto GEOAFRO aplica Geodireito para cartografar a cultura afro-brasileira</h3>
             <p>O Projeto GEOAFRO lançou, neste mês, uma série de mapas que ilustram a trajetória dos 
@@ -247,7 +247,7 @@
     </div>
     <div id="noticias" class="info-section">
         <button class="close-btn" onclick="closeSection('noticias')">X</button>
-        <h2>Notícias da Semana</h2>
+        <h2>Notícias sugundão</h2>
         <label for="newsFilter">Filtrar:</label>
         <input type="date" id="newsFilter" onchange="filterNews()">
         <hr>
