--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>0.2SegundãoCSF</title>
+    <link rel="icon" href="pre-sets/domínio.png">
     <style>
         body {
             font-family: Arial, sans-serif;
