--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #004da9;
+            background-color: #0f2c47;
             color: black;
             margin: 0;
             padding: 0;
@@ -18,7 +18,7 @@
         }
         .sidebar {
             width: 100%;
-            background-color: #a66d1e;
+            background-color: #f4eddc;
             display: flex;
             justify-content: center;
             padding: 10px 0;
@@ -35,7 +35,7 @@
         }
         .info-section {
             display: none;
-            background-color: #a66d1e;
+            background-color: #f4eddc;
             color: black;
             padding: 20px;
             border-radius: 10px;
@@ -55,25 +55,25 @@
             float: right;
         }
         .noticia {
-            background-color: #e8ae5d;
+            background-color: #c2bcae;
             padding: 10px;
             border-radius: 10px;
             margin-bottom: 10px;
         }
         .attlidades {
-            background-color: #e8ae5d;
+            background-color: #c2bcae;
             padding: 10px;
             border-radius: 10px;
             margin-bottom: 10px;
         }
         .assprova {
-            background-color: #e8ae5d;
+            background-color: #c2bcae;
             padding: 10px;
             border-radius: 10px;
             margin-bottom: 10px;
         }
         hr {
-            border-color: #e8ae5d;
+            border-color: #c2bcae;
         }
         .txtprincipal {
             text-align: center;
@@ -82,13 +82,13 @@
             color: gray;
         }
         .txtprc {
-            background-color: white;
+            background-color: #f4eddc;
             padding: 10px;
             border-radius: 10px;
             margin-bottom: 10px;
         }
         .trblpendente {
-            background-color: #e8ae5d;
+            background-color: #c2bcae;
             padding: 10px;
             border-radius: 10px;
             margin-bottom: 10px;
@@ -96,7 +96,7 @@
         .logo {
             width: 80%;
             height: 80%;
-            margin: 10px 50px 10px 50px;
+            margin: 10px 10px 10px 10px;
         }
         .noticia img {
             width: 100%;
@@ -104,13 +104,13 @@
         }
         #newsFilter {
             color: black;
-            background-color: #e8ae5d;
+            background-color: #c2bcae;
         }
         .aluno {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            background-color: #e8ae5d;
+            background-color: #c2bcae;
             color: black;
             padding: 10px;
             border-radius: 10px;
@@ -168,7 +168,7 @@
             <img src="pre-sets/user.png" alt="Alunos">
         </button>
     </div>
-    <img class="logo" src="pre-sets/domínio.png">
+    <img class="logo" src="pre-sets/SegDomínio.png">
     <div class="txtprc">
         <p class="txtprincipal"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus sed mauris egestas aliquet. Fusce euismod, sem ut laoreet tempus, ligula eros ornare elit, nec mollis arcu neque at nisl. Proin cursus mi velit, et dapibus metus faucibus nec. Fusce interdum enim lectus, nec tempor felis convallis in. Nulla facilisis urna a pretium pellentesque. Duis lobortis euismod lacus sed suscipit. Morbi pulvinar sit amet tortor vel feugiat. <br> Aliquam pharetra, diam in congue interdum, ex tortor iaculis diam, a vulputate dui lacus vel orci. Curabitur ornare sagittis magna, eget rhoncus nisl luctus ac. Sed vulputate vitae mi et vulputate. Cras eget velit et purus mattis vulputate. Etiam ultricies sapien risus. Integer ut venenatis orci, non dictum tellus. Sed lobortis volutpat neque, nec lobortis libero tincidunt sit amet. Etiam auctor ornare justo commodo vehicula. Nullam sed finibus nunc. Pellentesque quis suscipit dui. Ut pharetra, quam ut feugiat bibendum, ex massa hendrerit arcu, laoreet ultricies diam nisi ut lacus. Nunc malesuada urna ac venenatis malesuada. Praesent ultrices ipsum ut felis iaculis sodales. Donec metus risus, convallis sed pretium fermentum, semper eget dui. Fusce blandit accumsan dui in commodo. Etiam dignissim volutpat nisi, vel feugiat ante blandit eu. <br> In varius mauris molestie fringilla pellentesque. Curabitur leo dolor, dignissim vitae mauris a, volutpat condimentum orci. In vel faucibus purus. Aliquam mauris erat, efficitur gravida pulvinar vestibulum, imperdiet eget erat. Aenean sed dapibus tortor. Integer finibus sollicitudin velit, ut rutrum massa efficitur at. Ut sit amet sem feugiat, volutpat lacus quis, faucibus velit. Mauris cursus lorem non lacus pulvinar, in fermentum urna semper. Proin accumsan aliquet laoreet. Etiam ultrices interdum urna ac vehicula. Donec commodo magna lacinia, egestas libero in, convallis lorem. Nullam imperdiet quam lacinia velit cursus, vel suscipit lacus lobortis. Nam laoreet ante eu volutpat pretium. Curabitur rutrum neque id malesuada ultrices. <br>Nam fermentum volutpat iaculis. Sed magna elit, gravida sit amet nunc in, semper porttitor tortor. Cras et interdum orci. Vivamus vestibulum, augue sed pellentesque vulputate, tortor purus cursus nunc, id blandit odio nisi at quam. Vivamus mauris tortor, eleifend vitae est non, lacinia vulputate est. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec metus mauris, finibus ac mi sed, sollicitudin vestibulum nulla. Maecenas vel lorem vel magna suscipit egestas. Ut vitae enim a purus malesuada aliquam. Mauris felis neque, condimentum in tortor in, posuere porta erat. Sed interdum, velit ac sodales posuere, tellus eros consequat libero, ut aliquam orci urna vel neque. Vestibulum quis bibendum neque. In congue tincidunt facilisis. Aliquam non purus quis nisl posuere ornare ut vel ex. Suspendisse rhoncus sed ante sed hendrerit. <br> Cras auctor finibus ex vel fermentum. Etiam cursus tincidunt mauris quis aliquet. Fusce non massa sit amet lacus placerat efficitur non id ligula. Morbi leo libero, vulputate eget efficitur in, mollis sit amet nisi. Vivamus quis sem a sem tristique sodales sit amet sit amet ante. Aliquam accumsan justo vitae purus commodo iaculis. In tempus mauris ac risus fringilla, ut sodales purus faucibus. Donec eleifend odio vel massa sodales, efficitur sodales quam venenatis. Nam rutrum pellentesque massa commodo tempor. Curabitur sapien nisi, faucibus id consequat quis, dictum eu nunc. Sed iaculis, justo a suscipit pretium, tortor purus pellentesque tortor, non varius quam turpis eget purus. Nunc est ante, egestas a iaculis vitae, dignissim ut urna. </p>
     </div>
