--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             left: 50%;
             transform: translateX(-50%);
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+            transition:  transform 0.5s ease-out, opacity 0.5s ease-out;
+            opacity: 0;
+            pointer-events: none;
         }
         .close-btn {
             background-color: red;
@@ -128,27 +131,36 @@
             from {
                 opacity: 0;
                 transform: translateY(-10px);
+                transform: translateX(-50%);
             }
             to {
                 opacity: 1;
                 transform: translateY(0);
+                transform: translateX(-50%);
             }
         }
         @keyframes fadeSlideOut {
             from {
                 opacity: 1;
                 transform: translateY(0);
+                transform: translateX(-50%);
             }
             to {
                 opacity: 0;
                 transform: translateY(-10px);
+                transform: translateX(-50%);
             }
         }
         .fade-in {
+            display: block;
             animation: fadeSlideIn 0.5s ease-out forwards;
+            pointer-events: auto;
+            opacity: 1;
         }
         .fade-out {
             animation: fadeSlideOut 0.5s ease-out forwards;
+            opacity: 0;
+            pointer-events: none;
         }
     </style>
     <script>
@@ -160,6 +172,7 @@
                     setTimeout(() => section.style.display = "none", 500);
                 }
             });
+            document.getElementById(id).style.display = 'block';
             let section = document.getElementById(id);
             section.style.display = "block";
             section.classList.remove("fade-out");
