--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #0f2c47;
-            color: black;
+            color: #0f2c47;
             margin: 0;
             padding: 0;
             display: flex;
@@ -36,7 +36,7 @@
         .info-section {
             display: none;
             background-color: #f4eddc;
-            color: black;
+            color: #0f2c47;
             padding: 20px;
             border-radius: 10px;
             width: 90%;
@@ -44,7 +44,7 @@
             top: 70px;
             left: 50%;
             transform: translateX(-50%);
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+            box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.3);
             transition:  transform 0.5s ease-out, opacity 0.5s ease-out;
             opacity: 0;
             pointer-events: none;
@@ -106,7 +106,7 @@
             border-radius: 10px;
         }
         #newsFilter {
-            color: black;
+            color: #0f2c47;
             background-color: #c2bcae;
         }
         .aluno {
@@ -114,7 +114,6 @@
             align-items: center;
             justify-content: space-between;
             background-color: #c2bcae;
-            color: black;
             padding: 10px;
             border-radius: 10px;
             margin-bottom: 10px;
